[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/ui/menu/MenuSlider.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/font_64.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/ui/menu/MenuItem.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/menu/SettingsSlider.gd" type="Script" id=4]
[ext_resource path="res://scenes/ui/menu/ControlsSettingsSlider.tscn" type="PackedScene" id=5]

[node name="SettingsSlider" type="Node2D"]
script = ExtResource( 4 )

[node name="MenuSlider" parent="." instance=ExtResource( 1 )]

[node name="Label" parent="MenuSlider/Slider/LabelRoot" index="0"]
text = "Settings"

[node name="Controls" parent="MenuSlider/Slider/MenuController" index="0" instance=ExtResource( 3 )]

[node name="Label" type="Label" parent="MenuSlider/Slider/MenuController/Controls"]
margin_top = 20.0
margin_right = 1080.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Controls"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" parent="MenuSlider/Slider/MenuController" index="1" instance=ExtResource( 3 )]
position = Vector2( 0.0112305, 140 )

[node name="Label" type="Label" parent="MenuSlider/Slider/MenuController/Audio"]
margin_top = 20.0
margin_right = 1080.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Audio"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Interface" parent="MenuSlider/Slider/MenuController" index="2" instance=ExtResource( 3 )]
position = Vector2( 0.0224609, 280 )

[node name="Label" type="Label" parent="MenuSlider/Slider/MenuController/Interface"]
margin_top = 20.0
margin_right = 1080.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Interface"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsSettingsSlider" parent="MenuSlider/Slider" index="5" instance=ExtResource( 5 )]
position = Vector2( 120, 0 )
[connection signal="activated" from="MenuSlider/Slider/MenuController/Controls" to="." method="_on_Controls_activated"]
[connection signal="hidden" from="MenuSlider/Slider/ControlsSettingsSlider" to="." method="_on_slider_hidden"]

[editable path="MenuSlider"]
